124翻译及随心抽

--- a/OEBPS/Text/c124.xhtml
+++ b/OEBPS/Text/c124.xhtml
@@ -18,7 +18,7 @@
     <p>梅塞德斯他们以向四方散开的方式回避，以各自的方法开始飞行。</p>
     <p>梅塞德斯利用操纵重力浮上天空，尤莉亚利用风的魔法做跳板在天空中奔跑。</p>
     <p>本来就会飞的ドミニオン和皮可就更不用说了。</p>
-    <p>说到用火焰攻击的守护者，就会想起历史之眼，但同样是火焰，Fenix的威力远胜于历史之眼。</p>
+    <p>说到用火焰攻击的守护者，就会想起历史之眼，但同样是火焰，菲尼克斯的威力远胜于历史之眼。</p>
     <p>他们明明是游刃有余地回避了，天空却被炙热的热气弄得看起来扭曲了。</p>
     <p>历史之眼的主要攻击是精神攻击，火焰攻击不如说是辅助攻击。</p>
     <p>但是，菲尼克斯是纯粹的火焰驾驭者。如果认为自己和打历史之眼时一样，就会被烧伤。</p>
@@ -71,7 +71,7 @@
     <p>“<span class="character">……那家伙恐怕是炎本身……但是,那家伙是只要能继续燃烧不灭的事情。也就是说……氧气。那家伙完全困在没有氧气的状态,如果持续这样消失……ユリア,氧气是明白吗?</span>”</p>
     <p>“<span class="character">不知道!</span>”</p>
     <p>“<span class="character">应该是……</span>”</p>
-    <p>如果梅赛德斯的说法正确的话，打倒费尼克斯的方法就是完全灭火。</p>
+    <p>如果梅赛德斯的说法正确的话，打倒菲尼克斯的方法就是完全灭火。</p>
     <p>但是从战斗到现在，仅仅是消去或删去的程度是没有任何意义的。</p>
     <p>那么方法只有一个。除了不能燃烧本身以外别无他法。</p>
     <p>而使其成为可能的属性是风。巧妙地使用风的魔法制造出真空状态，把它关在那里的话……不，没有必要从这边制造出任何真空状态。</p>
