--- a/OEBPS/Text/c125.xhtml
+++ b/OEBPS/Text/c125.xhtml
@@ -11,186 +11,187 @@
 </head>
 
 <body>
-    <h1>第百二十五話　才能という名の呪縛</h1>
+    <h1>125. 名为才能的咒缚</h1>
 
-    <p>　目の前で微笑む少女を前に、メルセデスは混乱しかけた思考を即座に切り替えた。</p>
-    <p>　女だった事には驚いたし、ここまで人に近い外見で魔物というのはどうなんだという気持ちもある。鎧を脱いだドミニオンの姿は何なら吸血鬼やエルフェよりもホモ・サピエンスに近い。</p>
-    <p>　ドミニオンという種の全てがこうなのか、それともドミニオンの中にも男女の差があるのかどうかも分からない。</p>
-    <p>　だが、そんなのは後で聞けばいい事だ。今気にする事ではない。</p>
+    <p>面对在眼前微笑的少女，梅赛德斯立即转换了混乱的思考。</p>
+    <p>是女人的事感到吃惊，也有到这里以接近人的外表魔物怎样的心情。脱下铠甲的多米尼昂比吸血鬼和精灵更接近霍莫·萨皮恩斯。</p>
+    <p>也不知道多米尼昂这种物种是全部都是这样，还是多米尼昂也有男女差别。</p>
+    <p>但是，那种事以后再问就好了。现在不是在意的事。</p>
     <p class="divline"></p>
-    <p>“<span class="character">無事だったか。まだ戦えるな？</span>”</p>
-    <p>“<span class="character">無論だ</span>”</p>
+    <p>“<span class="character">平安无事吗？还能战斗吗？</span>”</p>
+    <p>“<span class="character">当然</span>”</p>
 
-    <p>　敵はまだ健在で、そして此処は戦場。</p>
-    <p>　ならば鎧の中身など些細な問題でしかない。</p>
-    <p>　今思考を割くべきは、いかにしてあの炎の化身を打倒するかだ。</p>
-    <p>　物理攻撃はほぼ無意味。倒すには炎を完全に消さなくてはならない。</p>
-    <p>　火を消す方法はメルセデスの知る限りでは大きく分けて四つある。</p>
-    <p>　一つ、除去消火法。</p>
-    <p>　可燃物の供給を止めたり、周囲の可燃物を取り除く事で鎮火させる方法だ。</p>
-    <p>　森林火災などで、周囲の木を伐採して除去する事により燃え広がる事を防ぐのもこれに当たる。</p>
-    <p>　だがフェーニクスはどう見ても近くに可燃物などない。</p>
-    <p>　無いものは取り除けない。したがってこの消火法は、あの炎の鳥には無意味だ。</p>
-    <p>　二つ、冷却消火法。</p>
-    <p>　恐らく一般的に最も知られているだろう消火法がこれだ。</p>
-    <p>　水をかけて冷却するのもこれに該当している。</p>
-    <p>　そして三つ、窒息消火法。</p>
-    <p>　酸素の供給を止める。あるいは濃度を下げる事により燃焼を止める方法だ。</p>
-    <p>　火の付いた蝋燭にコップを被せれば火が消える理由がこれだ。</p>
-    <p>　前世の日本ならば、恐らくは小学生でも知っているだろう。</p>
-    <p>　他には砂をかけて消すのもこの窒息消火法に分類される。</p>
-    <p>　もう一つ、可燃物の原子を不活性化させる抑制消火法というのもあるが、可燃物がそもそもないので、これも一つ目と同じくこの場では何の意味もない。</p>
+    <p>敌人还健在，而且这里是战场。</p>
+    <p>那么，铠甲的内容等只是一个小问题。</p>
+    <p>现在应该打破思考的是如何打倒那火焰的化身。</p>
+    <p>物理攻击几乎没有意义。要打倒就必须完全熄灭火焰。</p>
+    <p>据梅赛德斯所知，灭火方法大致分为四种。</p>
+    <p>一、清除灭火法。</p>
+    <p>这是通过停止可燃物的供给或去除周围的可燃物来灭火的方法。</p>
+    <p>在森林火灾中，通过砍伐周围的树木来防止燃烧蔓延也是如此。</p>
+    <p>但是，菲尼克斯怎么看都觉得附近没有可燃物。</p>
+    <p>没有的东西不能去除。因此，这种灭火法对那只火鸟来说是毫无意义的。</p>
+    <p>二、冷却灭火法。</p>
+    <p>恐怕最广为人知的灭火法就是这个。</p>
+    <p>浇上水冷却也属于此。</p>
+    <p>还有三种，窒息灭火法。</p>
+    <p>停止供应氧气。或者通过降低浓度来停止燃烧的方法。</p>
+    <p>在点燃的蜡烛上盖上杯子，火就会熄灭的理由就是这个。</p>
+    <p>如果是前世的日本，恐怕连小学生都知道吧。</p>
+    <p>另外，撒上沙子熄灭也被分类为这种窒息灭火法。</p>
+    <p>还有一种是抑制可燃物原子失活的灭火法，因为原本就没有可燃物，所以这和第一个一样在这个地方没有任何意义。</p>
     <p></p>
     <p></p>
-    <p>“<span class="character">……砂か</span>”</p>
+    <p>“<span class="character">……沙子吗？</span>”</p>
     <p></p>
     <p></p>
-    <p>　火に対しては砂をかける。</p>
-    <p>　単純明快で、それ故に今の今まで盲点になっていた。</p>
-    <p>　この戦場は空中で、砂などどこにもない。</p>
-    <p>　だが無いなら出せばいいだけの話ではないか。</p>
-    <p>　メルセデスの魔法の属性は『地』、『鉄』、『風』、『雷』の四つ。</p>
-    <p>　そのうち、『雷』魔法の会得には未だに至っていないので、実質的には三つだ。</p>
-    <p>　そして最も得意としているはずの『地』は、今までずっと重力魔法として使用してきた。</p>
-    <p>　だが、ここが盲点になってしまっていたのだ。</p>
-    <p>　なまじ重力の操作という強力な固有技能を先に身に着けてしまったせいで、地属性魔法が本来持つポテンシャルから目が逸れていた。</p>
+    <p>对火撒沙子。</p>
+    <p>单纯明快，因此到现在为止都是盲点。</p>
+    <p>这个战场在空中，哪里都没有沙子。</p>
+    <p>但是如果没有的话，只要拿出来就好了。</p>
+    <p>梅赛德斯的魔法属性有“地”、“铁”、“风”、“雷”四种。</p>
+    <p>其中，还没有学会“雷”魔法，实际上只有三个。</p>
+    <p>并且应该最擅长的『地』，到现在为止一直作为重力魔法使用。</p>
+    <p>但是，这里变成了盲点。</p>
+    <p>因为先掌握了重力操作这一强有力的固有技能，所以从地属性魔法本来拥有的潜力中转移了目光。</p>
     <p></p>
     <p></p>
-    <p>“<span class="character">やってみるか……全員、私の側に集まれ！　巻き込まれないようにな……</span>”</p>
+    <p>“<span class="character">试试看……全员集合到我身边！不要被卷入其中……</span>”</p>
     <p></p>
     <p></p>
-    <p>　目を閉じ、両手でハルバードを握って意識を集中させる。</p>
-    <p>　どうせフェーニクスのせいで視界は利かない。</p>
-    <p>　故に狙っても当てられるものではなく、ここまで苦戦を強いられてきた。</p>
-    <p>　だが狙って当たらないならば、狙わなければいい。</p>
-    <p>　この戦場は一見すると、どこまでも広がる大空に見える。</p>
-    <p>　だが実際は、ダンジョンという閉鎖空間の中だ。</p>
-    <p>　壁や天井に空を投影して、広い空間に見せかけているだけに過ぎない。</p>
-    <p>　その事は、ここに来るまでにも確認して来た事のはずだ。</p>
-    <p>　ならば不可能ではない……この試練の間全体を攻撃対象にする事も！</p>
+    <p>闭上眼睛，双手握住哈尔巴德，集中意识。</p>
+    <p>反正是因为菲尼克斯，视野不好。</p>
+    <p>所以即使瞄准了也不能猜中，一直苦战到现在。</p>
+    <p>但是如果瞄准不中的话，不瞄准就好了。</p>
+    <p>这个战场乍一看，可以看到广阔的天空。</p>
+    <p>但实际上是在一个叫做迷宫的封闭空间里。</p>
+    <p>只不过是把天空投影到墙壁和天花板上，伪装成广阔的空间而已。</p>
+    <p>那件事应该是来这里之前也确认过的。</p>
+    <p>那么也不是不可能的……在这个考验期间也会把全体作为攻击对象！</p>
     <p></p>
     <p></p>
-    <p>“<span class="character">降り注げ！</span>”</p>
+    <p>“<span class="character">降下吧</span>”</p>
     <p></p>
     <p></p>
-    <p>　メルセデスが魔力を解放した。</p>
-    <p>　それと同時に、空中に出現したのは視界を埋め尽くすほどの砂だ。</p>
-    <p>　地属性魔法は大地を操るだけの属性と書物には記されていた。</p>
-    <p>　だがそうではない。魔法とは大気中のナノマシンを操る力の事。ナノマシンに命じ、様々な現象を引き起こす力こそが魔法だ。</p>
-    <p>　何もない場所に鉄を出せるのに、岩や砂を出せない道理はないだろう。</p>
-    <p>　なのに一般的に地面を操るだけと認識されてしまっているのは……逆に大地が身近すぎたからだろうか。</p>
-    <p>　何もない所に砂を出すより、既に足元にある砂を使った方が早いし楽だ。</p>
-    <p>　地面から剣は生えていない。だから魔法で剣を出したければ鉄の魔法で剣を生み出す必要がある。</p>
-    <p>　だが地面に剣は生えていなくとも、石や砂ならばいくらでもあるのだ。</p>
-    <p>　ならばそれを使った方が早いのは言うまでもなく、地面から岩の棘を出す場合もわざわざ岩を一から生み出して棘にするより、既にそこにある石を少し弄って岩の棘にしてしまう方が効率がいい。</p>
-    <p>　言ってしまえば、地属性魔法とは何処であっても補助輪が付いている状態なのだ。</p>
-    <p>　勿論、こんな簡単な事に誰も気付いていないなどあり得ない。</p>
-    <p>　ある程度地属性魔法に精通した者ならば、誰に教えられるまでもなく自ら気付けるだろう。</p>
-    <p>　メルセデスの読んだ本に書いてあったのは、初心者用の魔力制御法でしかなかったのだ。</p>
+    <p>梅赛德斯释放了魔力。</p>
+    <p>与此同时，出现在空中的是填满视野的沙子。</p>
+    <p>书中记载着地属性魔法只是操纵大地的属性。</p>
+    <p>但并非如此。魔法是指操纵大气中的纳米机器的力量。命令纳米机器，引起各种现象的力量才是魔法。</p>
+    <p>在什么都没有的地方出铁，没有不出岩石和沙子的道理吧。</p>
+    <p>但是，一般认为只是操纵地面……相反，是因为大地太近了吧。</p>
+    <p>比起在什么都没有的地方出沙子，用脚下的沙子更快更轻松。</p>
+    <p>地上没有长剑。所以如果想用魔法出剑的话，就需要用铁的魔法产生剑。</p>
+    <p>但是，即使地上没有长剑，只要是石头和沙子就有很多。</p>
+    <p>那嚒使用它就不用说了，从地面上伸出岩石的刺的时候，比起特意从一开始生出岩石做成刺，稍微玩弄一下已经在那里的石头做成岩石的刺的效率更好。</p>
+    <p>说起来，地属性魔法无论在哪里都是带有辅助轮的状态。</p>
+    <p>当然，这么简单的事情谁都没注意到是不可能的。</p>
+    <p>如果是在某种程度上精通地属性魔法的人，就不用被谁教了，自己也会注意到吧。</p>
+    <p>梅赛德斯读过的书上写的只是初学者用的魔力控制法。</p>
     <p></p>
     <p></p>
-    <p>　空から降り注いだ砂を、風の魔法に乗せる。</p>
-    <p>　メルセデス達は避けるように。そしてフェーニクスを埋め尽くすように。</p>
-    <p>　風に砂を乗せる事で応用の幅を広げる……これも簡単な事だ。</p>
-    <p>　あのグラシアンですら出来ていた。</p>
-    <p>　何ら特別な事ではない基礎中の基礎……こんな攻撃方法は、本当ならばフェーニクスの特性を理解してすぐに思い付くべきものだ。</p>
-    <p>　それに気付けなかった理由は一つ。メルセデスが一足飛びで前に進み過ぎていたからに他ならない。</p>
-    <p>　何と間抜けな話だ、とメルセデスは自嘲する。</p>
-    <p>　基礎という土台を固める事こそが後の応用に活きて来ると知っていたはずなのに。積み木は土台が安定している程高く積めると自分に言い聞かせただろうに。</p>
-    <p>　なのに基礎を疎かにしていた。土魔法の何たるかを熟知する前に、重力というより強力で、より特別で、自分しか使えぬ目先の力を優先してしまった。</p>
-    <p>　ギルドカードで魔力の伸びだけが悪いのも当たり前だ。</p>
-    <p>　基礎を疎かにしている者がどうしてその先に行く事が出来る。</p>
-    <p>　それでもここまで何とかなってしまったのは、ただこの身の才能に助けられていただけ。</p>
-    <p>　父から娘へと……あの男ベルンハルトから遺伝した才覚という名の補助輪に支えられていた。</p>
-    <p>　ああ、本当に何と滑稽なのだろうと笑うしかない。</p>
-    <p>　自転車を満足に漕ぐ事も出来ぬくせに、そうとは知らずに自分の力で漕いでいると今まで勘違いしていた。</p>
-    <p>　そのすぐ後ろにベルンハルトがいて、倒れないように支えられている事にすら気付けずに……。</p>
-    <p>　これでは奴を超えるなど夢のまた夢。永遠にベルンハルトの手の中から出る事など出来ない。</p>
+    <p>把从天空洒下的沙子，乘上风的魔法。</p>
+    <p>请避开梅赛德斯等人。然后像填满菲尼克斯一样。</p>
+    <p>在风中放上沙子，扩大应用的范围……这也是很简单的事情。</p>
+    <p>连那个格拉西亚都做出来了。</p>
+    <p>没有什么特别的基础中的基础……这样的攻击方法，如果是真的，应该理解菲尼克斯的特性后马上想到。</p>
+    <p>没有注意到那个的理由有一个。这是因为梅赛德斯一步一步地往前走太多了。</p>
+    <p>梅赛德斯自嘲地说，这是多么愚蠢的话。</p>
+    <p>明明知道只有巩固基础这个基础才能在以后的应用中发挥作用。我告诉自己积木会堆得越高，地基越稳定。</p>
+    <p>但是却疏忽了基础。在熟悉土魔法的什么之前，比起重力更强大，更特别，优先了只有自己才能使用的眼前的力量。</p>
+    <p>用行会卡只魔力的伸长坏也是理所当然的。</p>
+    <p>不了解基础的人怎么能走到那前面。</p>
+    <p>即便如此，能想办法做到这一点的，只是被自己的才能所帮助。</p>
+    <p>从父亲到女儿……被那个男人伯尔恩哈特遗传的才智这个名字的辅助轮支撑着。</p>
+    <p>啊，真是太滑稽了，只能笑了。</p>
+    <p>明明不能很好地划自行车，却不知道是这样，一直误以为是用自己的力量划的。</p>
+    <p>就在那后面有伯尔尼哈特，连为了不倒下而被支撑着的事情都没注意到……。</p>
+    <p>这样的话就超越他吧。永远不能从伯恩哈特的手中出来。</p>
     <p></p>
     <p></p>
-    <p>“<span class="character">……殿？　笑って……</span>”</p>
+    <p>“<span class="character">……老爷？在笑……</span>”</p>
     <p></p>
     <p></p>
-    <p>　横から、ユリアの怯えたような声が聞こえた。</p>
-    <p>　言われて、初めて気付いた。</p>
-    <p>　頬に触れてみれば、自らの口の端が吊り上がっていた事を理解する。</p>
-    <p>　そうか、私は笑っていたのか。いや、嘲笑わらっていたのか。</p>
-    <p>　自らの滑稽さを、醜態を、行き場のないこの羞恥を。</p>
+    <p>从旁边传来尤利娅害怕的声音。</p>
+    <p>被说了之后，第一次注意到了。</p>
+    <p>试着触摸脸颊，就能理解自己的嘴的边缘吊起来了。</p>
+    <p>是吗，原来我在笑。不，是嘲笑吗。</p>
+    <p>自己的滑稽，丑态，无处不在的羞耻。</p>
     <p></p>
     <p></p>
-    <p>“<span class="character">……ああ、そうか</span>”</p>
+    <p>“<span class="character">……啊，是吗？</span>”</p>
     <p></p>
     <p></p>
-    <p>　胸の内に渦巻くドロドロとしたものを自覚し、メルセデスは更に口角を吊り上げた。</p>
-    <p>　思えば今まで、本当の意味で『上手くいかない』という出来事に直面した事がほとんどない。</p>
-    <p>　物事が上手くいかない事などいくらでもあった。だがその事すらもメルセデスは想定内として、次に繋げてきた。想定外すら想定内だった。</p>
-    <p>　チョコレート作りの時も最初は失敗した。だがあの時はやる前から『最初から上手くいくわけがない』という想定の上でやっていた。</p>
-    <p>　一度も転ばぬ者は転び方を知らずに痛手を被る。だからメルセデスは転ぶ事を恐れはしなかったし、何度も転んで歩いてきた。</p>
-    <p>　だが最初から転ぶ事を想定して転んでいる者は果たして、本当の意味で転んでいると言えるのか。</p>
-    <p>　否。メルセデスは今、初めて自覚した。</p>
-    <p>　――私は一度も、転んでいなかった……！</p>
+    <p>梅赛德斯意识到自己的内心是一个漩涡的错综复杂的东西，更是嘴角上吊。</p>
+    <p>回想起来，至今为止，几乎没有遇到过真正意义上的“不顺利”的事情。</p>
+    <p>事情有很多不顺利的事情。但是，就连这件事，梅赛德斯也在预想中，接下了。连预想之外都在预想之内。</p>
+    <p>做巧克力的时候一开始也失败了。但是那个时候在做之前就在设想“从一开始就不可能顺利”的基础上做了。</p>
+    <p>一次也不摔倒的人，不知道摔倒的方法而受到重伤。所以梅赛德斯并不害怕摔倒，也多次摔倒走了过来。</p>
+    <p>但是，从一开始就设想摔倒而摔倒的人，真的能说是在真正的意义上摔倒了吗。</p>
+    <p>否。梅赛德斯现在才意识到。</p>
+    <p>——我一次也没有摔倒……！</p>
     <p></p>
     <p></p>
-    <p>　『上手くいかない』を想定内に入れていたせいで、それすら含めて何もかもがメルセデスの『思い通り』になってしまっていた。</p>
-    <p>　これではつまらなくて当たり前。退屈して当たり前。</p>
-    <p>　だって全部分かった上でやっているのだから。</p>
-    <p>　失敗する事すら実際は想定のうちで、ただ失敗したフリをしているだけの茶番だったのだから。</p>
-    <p>　脚本の最後に『全部上手くいってハッピーエンド』と先に明記された主人公が、その結末に至るまでの道のりでいくら苦戦して挫折して転んで泣いて失敗しても、それも含めて結局は最後の成功の為にスパイスでしかない。</p>
-    <p>　ならばその主人公がもしも……もしも、自らの成功を確約しているその脚本とご都合主義を自覚してしまったなら、果たしてその主人公は、この先起こるだろう様々な苦難や挑戦に心を躍らせる事が出来るだろうか……？</p>
-    <p>　メルセデスはそれと同じだった。</p>
-    <p>　本当の意味で何かに苦戦した事が無い。壁に当たった事がない。</p>
-    <p>　どうせ最後は上手くいく……そんな諦めにも似た考えがメルセデス自身すら自覚せぬままに彼女の中にあった。</p>
+    <p>因为在设想中加入了“不顺利”，所以包括这一点在内，一切都变成了梅赛德斯的“如意”。</p>
+    <p>这样无聊是理所当然的。无聊是理所当然的。</p>
+    <p>因为是在全部明白的基础上做的。</p>
+    <p>连失败都是在实际设想中，只是假装失败的闹剧。</p>
+    <p>在剧本的最后，先写明“一切顺利，幸福的结局”的主人公，在到达结局的道路上，无论怎么苦战，挫折，跌倒，哭泣，失败，包括这一点在内，最终都只是为了最后的成功的香料。</p>
+    <p>那么，如果那个主人公……如果意识到了自己的成功的剧本和权宜之计的话，那么那个主人公到底能不能为今后会发生的各种各样的苦难和挑战而心动呢……？</p>
+    <p>梅赛德斯和那个一样。</p>
+    <p>在真正的意义上没有苦战过什么。没碰过墙。</p>
+    <p>反正最后也会顺利进行……与这种放弃相似的想法连梅赛德斯自己都没有意识到就在她心中。</p>
     <p></p>
     <p></p>
-    <p>　だが今はどうだ？</p>
-    <p>　転ぶ事を最初から想定していても、転ばぬように支えられるのは想定外だった。</p>
-    <p>　それに気付く事すら出来なかったのは更に想定外。</p>
-    <p>　醜態も醜態。恥辱も恥辱。</p>
-    <p>　ああ、何たる滑稽さか。どうせ転ばないんだろうなと思いながら、退屈しなから自転車を漕いでいて、そのすぐ後ろで嘲笑しながら自転車を支えていた父の影にも気付いていなかったなど。</p>
-    <p>　奴の血に保護まもられ続けていたなどと！</p>
+    <p>但是现在怎么样？</p>
+    <p>即使从一开始就设想摔倒，但为了不摔倒而被支撑是意料之外的。</p>
+    <p>连注意到那个都没能注意到，这更是出乎意料。</p>
+    <p>丑态也是丑态。耻辱也是耻辱。</p>
+    <p>啊，多么滑稽啊。一边想着反正不会摔倒，一边无聊地划着自行车，在后面嘲笑着支撑着自行车的父亲的影子也没有注意到。</p>
+    <p>一直被他的血保护着！</p>
     <p></p>
     <p></p>
-    <p>“<span class="character">これが、恥という感情なのだろうな。そして自分への怒りなのだろうな</span>”</p>
+    <p>“<span class="character">这就是所谓的羞耻的感情吧。然后是对自己的愤怒吧。</span>”</p>
     <p></p>
     <p></p>
-    <p>　今まで何かを強く恥じた事などなかった。恥じるものなどなかったから。</p>
-    <p>　今まで何かに強く怒りを抱いた事もなかった。怒るまでもないものばかりだったから。</p>
-    <p>　だが今……それは弱く、儚く、すぐに消えてしまう程度のものでしかないが……確かにメルセデスの中には自分の不甲斐なさへの怒りと恥が芽生えていた。</p>
-    <p>　冷静さを揺るがすほどのものではない。</p>
-    <p>　だがそれでも、たった今芽生えたそれをメルセデスは大切に胸の内に留めた。</p>
-    <p>　やっと見えた気がする。自分が本当にやりたい事が。</p>
+    <p>到现在为止没有强烈地害羞过什么。因为我没有什么好害羞的。</p>
+    <p>到现在为止也没有对什么东西抱有强烈的愤怒。都是些用不着生气的东西。</p>
+    <p>但是现在……那只是软弱、虚幻、马上就会消失的程度……确实在梅赛德斯中萌生了对自己不争气的愤怒和羞耻。</p>
+    <p>不至于动摇冷静。</p>
+    <p>但是即便如此，梅赛德斯还是珍惜地将刚刚萌芽的那个留在了心中。</p>
+    <p>我感觉终于看见了。自己真正想做的事。</p>
     <p></p>
     <p></p>
-    <p>　――本当に欲しかったのは『想定外』。全力と最善を尽くした上で、それでも真の意味で思い通りにならない何かに出会いたかった。</p>
+    <p>——真正想要的是“意料之外”。在尽了全力和最大努力的基础上，我还是想遇到一些在真正意义上不如意的东西。</p>
     <p></p>
     <p></p>
-    <p>“<span class="character">……全員、備えろ。派手にやるぞ</span>”</p>
+    <p>“<span class="character">……全体人员，准备好。要华丽地做哦。</span>”</p>
     <p></p>
     <p></p>
-    <p>　メルセデスの黄金の眼が輝き、更に魔力が膨れ上がった。</p>
-    <p>　すぐに消えてしまうだろうこの怒りだが、今はあえてこれに身を任せよう。</p>
-    <p>　初めて知ったこの不快さを、今は存分に堪能しよう。</p>
-    <p>　思えば感情を乗せて魔法を使うのは初の事……作業ではなく怒りに任せて使うのは初の出来事。</p>
-    <p>　それをした時、どうなるのかはメルセデス自身にも分からない。</p>
+    <p>梅赛德斯的黄金眼闪耀着，魔力更加膨胀了。</p>
+    <p>虽然这是马上就会消失的愤怒，但现在还是把自己交给这个吧。</p>
+    <p>第一次知道的这种不愉快，现在尽情享受吧。</p>
+    <p>回想起来，这是第一次带着感情使用魔法……这是第一次不是工作，而是交给愤怒来使用。</p>
+    <p>做了那个的时候，会变成什么样，梅赛德斯自己也不知道。</p>
     <p></p>
     <p></p>
-    <p>“<span class="character">……潰れろ！</span>”</p>
+    <p>“<span class="character">……崩溃吧！</span>”</p>
     <p></p>
     <p></p>
-    <p>　空から大量の砂が降り注ぐ。</p>
-    <p>　そして、大空だったはずの試練の間は――まるで砂漠のような砂地へと姿を変えていた。</p>
+    <p>大量的沙子从空中倾泻而下。</p>
+    <p>然后，在本应是天空的考验期间——仿佛变成了沙漠般的沙地。</p>
     <p class="divline"></p>
-    <p>　メルセデス達が戦っているダンジョンの外。</p>
-    <p>　空は暗く、天では月が青く輝いている。</p>
-    <p>　その日の月は、昨晩よりも少しだけ満月に近付いていた。</p>
-    <p>メルセデス“転びながらでも自転車の乗り方を覚えればヨシ！”</p>
-    <p>ベルンハルト“おっと、転ぶと大変だ。パパが後ろで支えてあげよう”</p>
-    <p>メルセデス“アハハハハハ”</p>
-    <p>ベルンハルト“フハハハハハ、ほーら速い速いー”</p>
+    <p>梅赛德斯他们战斗的迷宫外面。</p>
+    <p>天空是黑暗的，天上月亮是蓝色的。</p>
+    <p>那天的月亮比昨晚稍微接近了满月。</p>
+    <p class="divline"></p>
+    <p>梅赛德斯“<span class="character">即使摔倒了，只要记住骑自行车的方法，芦苇！</span>”</p>
+    <p>伯恩哈特“<span class="character">哎呀，摔倒的话会很辛苦的。爸爸在后面支持你吧</span>”</p>
+    <p>梅赛德斯“<span class="character">哈哈哈</span>”</p>
+    <p>伯恩哈特“<span class="character">哈哈哈，好快啊</span>”</p>
     <p></p>
     <p></p>
-    <p>ドミニオン“……こういう事か！”</p>
-    <p>メルセデス“大体合ってるが死ぬほど嫌な光景だな……”</p>
+    <p>ドミニオン“<span class="character">……原来是这样！</span>”</p>
+    <p>梅赛德斯“<span class="character">虽然基本上是对的，但真是讨厌死了的光景啊……</span>”</p>
 </body>
 
 </html>
