--- a/OEBPS/Text/c134.xhtml
+++ b/OEBPS/Text/c134.xhtml
@@ -100,7 +100,7 @@
     <p>到目前为止，梅赛德斯一直保持着极限的谨慎。</p>
     <p>可以说是胆小。</p>
     <p>害怕被背叛，害怕成为和别人不同的东西，一直没有迈出一步。</p>
-    <p>但是，经过与费尼克斯的战斗，我意识到了。</p>
+    <p>但是，经过与菲尼克斯的战斗，我意识到了。</p>
     <p>自己追求的是什么。自己无可奈何地扭曲着，已经治不好了。</p>
     <p>那么，首先接受这个扭曲的自己吧。承认至今为止拒绝的自己，在此基础上走自己的路吧。</p>
     <p>贯穿无表情的梅赛德斯的嘴角扭曲，牙齿窥视。</p>
