--- a/OEBPS/Text/c141.xhtml
+++ b/OEBPS/Text/c141.xhtml
@@ -24,7 +24,7 @@
     <p>也有可能发生不战而国家灭亡等事情。</p>
     <p>守护者无论哪一个都能与一国的军队匹敌，但这个卡斯特罗费与其说是军队，不如说是对一国……不是在短期战中歼灭，而是在长期战中慢慢消灭的优秀存在。</p>
     <p>虽然如此，但并不是直接战斗能力弱。</p>
-    <p>作为守护者具备最低限度的战斗力，从压倒费尼克斯的事也明显吧。</p>
+    <p>作为守护者具备最低限度的战斗力，从压倒菲尼克斯的事也明显吧。</p>
     <p>因此打倒这个黑烟巨人是极其困难的事情。</p>
     <p>那个现在——崩溃了。</p>
     <p></p>
@@ -37,7 +37,7 @@
     <p></p>
     <p>梅赛德斯用重力将伯恩哈特用魔法产生的超重铁块放大到百倍的重量，击落在卡塔斯特劳费上。</p>
     <p>不管怎么说能自如地操纵烟，烟就是烟。如果被超重力推到地面上就没办法了。</p>
-    <p>而且这个烟的巨人并不是像费尼克斯那样由火焰构成的，因为是烟中一般有本体的类型，所以物理攻击会通过。</p>
+    <p>而且这个烟的巨人并不是像菲尼克斯那样由火焰构成的，因为是烟中一般有本体的类型，所以物理攻击会通过。</p>
     <p>所以这样被铁块压碎的话，就没有办法了。</p>
     <p>梅赛德斯和伯恩哈特站在无法动弹的守护者面前，同时放下武器斩首。</p>
     <p>这太过分了。曾经有过这样通过流动作业完成考验的挑战者吗。</p>
