--- a/OEBPS/Text/c116.xhtml
+++ b/OEBPS/Text/c116.xhtml
@@ -12,59 +12,59 @@
 
 <body>
     <h1>116. ユリアとマックスの現在</h1>
-    <p>現在梅赛德斯は二つのダンジョンを所有している。</p>
-    <p>一つは、六年前に攻略したシュタルクダンジョン。</p>
-    <p>普段はアクセサリとしてポケットの中に入れている物であり、戦闘時にはハルバード『ブルートアイゼン』となって猛威を振るうメインウェポンだ。</p>
-    <p>梅赛德斯が使う魔物の中でも最も信用しているアシュラオーガのベンケイや、シュヴァルツ・ヴォルファングのクロも、元々はここで捕獲した魔物である。</p>
-    <p>次に、かつて裏からオルクスにちょっかいをかけていたベアトリクス帝国が所有していたダンジョン。</p>
-    <p>こちらは女帝ベアトリクスが用いていた事もあって、『帝国ダンジョン』と呼んでいる。</p>
-    <p>植物系の魔物をメインとするダンジョンだが、ベーゼデーモンのシュフや、アシュタールのピーコなどの出身ダンジョンでもあるので、植物系しかいないというわけではない。</p>
-    <p>この二つが現在梅赛德斯が所有しているダンジョンであり、他に所在が判明しているのはベルンハルトが（多分）所有しているプラクティスダンジョン。吉克林德が所有している王剣。そして複雑なお家問題の末に兄菲利克斯の手に渡った『真の王派』が所有していたダンジョンの三つだ。</p>
-    <p>この『真の王』問題の際に梅赛德斯が事の成り行きで預かる事になってしまったのが、他でもない真の王として祭り上げられていた哀れな少年マックス・ファイトと、腕は確かだが頭が残念な隠密のユリアという女である。</p>
-    <p>梅赛德斯はこの二人の教育をベンケイに任せ、今まで放置していた。</p>
-    <p>だが、そろそろ少しはマシになっている頃かと考え、様子を見る事にしたのだ。</p>
-    <p>自らのダンジョンの中に自分自身を収納し、ダンジョン内を歩く。</p>
-    <p>二十四階層を丸ごと改造したトレーニングジムではゴブリンゲネラールに指導されながらゴブリン達が訓練を積んでおり、いずれもなかなか逞しい肉体を手に入れていた。</p>
-    <p>ジムの端で一際存在感を放つのはワルイ・ゼリーというゼリー状の魔物で、１トンのバーベルを高速でベンチプレスしていた。</p>
-    <p>昔はゼリーらしくプルプルしていたのだが、今はもうカッチカチだ。全然プルプルしていない。</p>
-    <p>“<span class="character">フンフンフンフンフンフンフンフン！　僕悪いゼリーだよッッ！！　いつかマスターの役に立つ為に頑張るんだッッ！！</span>”</p>
-    <p>汗（？）を流しながら己を追い込み続けるゼリーをシカトし、梅赛德斯は下へと降りていく。</p>
-    <p>最下層は居住空間になっており、梅赛德斯好みの三階建ての家が建っている。</p>
-    <p>以前は二階建てだったのだが、住民が増えたので少し前に三階建てに増築しておいた。</p>
-    <p>現在、その家ではベンケイがマックスとユリアの教育をしているはずである。</p>
-    <p>家に近付くとまず、家の外でくつろいでいたクロが尻尾を振りながら歩いてきたので頭を撫でてやった。</p>
-    <p>そのまま自分の家なので一切遠慮せずにドアを開けて居間へ向かう。</p>
-    <p>そこではテーブルを挟んでベンケイ、マックス、ユリア、それから教师役としてベンケイのサポートを頼んでおいたゴブリンヘクサーが座っていた。</p>
-    <p>他に梅赛德斯が所有（？）している魔物以外の存在としては女帝ベアトリクスがいるが、アレは教育によくなさそうなので帝国ダンジョンの方に屋敷を建てて、そちらに住ませている。なのでこっちにはいない。</p>
+    <p>现在梅赛德斯拥有两个迷宫。</p>
+    <p>一个是六年前攻占的施塔克迷宫。</p>
+    <p>平时作为装饰品放在口袋里的东西，是战斗时成为哈尔巴德『蓝色眼圈』肆虐的主要武器。</p>
+    <p>梅赛德斯使用的魔物中最信任的阿什拉奥加的本凯和施瓦尔茨·沃尔芬格的克洛，原本也是在这里捕获的魔物。</p>
+    <p>其次，曾经从背面对奥尔克斯调情的贝阿特里克斯帝国所有的迷宫。</p>
+    <p>这是女帝贝阿特里克斯使用过的，被称为“帝国迷宫”。</p>
+    <p>虽然是以植物系的魔物为主的迷宫，但也是贝塞代蒙的舒夫、阿什塔尔的皮可等出身的迷宫，所以并不是只有植物系。</p>
+    <p>这两个是现在梅赛德斯所有的迷宫，其他判明所在的是伯恩哈特（大概）所有的实践迷宫。吉克林德所有的王剑。并且是复杂的家问题的结果交给哥哥菲利克斯的『真的王派』所有的迷宫的三个。</p>
+    <p>在这个“真之王”问题上，梅赛德斯以事情的趋势保管的是被供奉为真之王的可怜少年马克斯·法特，和虽然实力强悍但是头脑很遗憾的隐秘的叫尤里亚的女人。</p>
+    <p>梅赛德斯把这两个人的教育交给了本凯，一直放任不管。</p>
+    <p>但是，想着差不多该好一点了，所以决定看看情况。</p>
+    <p>在自己的迷宫中收纳自己，在迷宫内行走。</p>
+    <p>在改造了二十四个阶层的健身房里，在哥布林格勒的指导下，哥布林们积累了训练，都得到了很健壮的肉体。</p>
+    <p>在健身房边上散发出存在感的是一种叫做华尔伊果冻的果冻状魔物，高速压着一吨杠铃。</p>
+    <p>以前像果冻一样脆脆的，现在已经很脆了。完全没有打滑。</p>
+    <p>“<span class="character">哼哼哼哼哼哼哼哼！我是坏果冻！！总有一天会为了帮助主人而努力的！！</span>”</p>
+    <p>汗（？）梅赛德斯一边流着眼泪一边继续追赶着自己的果冻，朝下走去。</p>
+    <p>最下层是居住空间，建有梅赛德斯喜欢的三层房子。</p>
+    <p>以前是两层楼，但是因为居民增加了，所以不久前增建了三层楼。</p>
+    <p>现在，在那所房子里，本凯应该在对马克斯和尤里亚进行教育。</p>
+    <p>一靠近家，首先在家外面放松的小黑摇着尾巴走来，抚摸着他的头。</p>
+    <p>就这样因为是自己的家，所以完全不客气地打开门去起居室。</p>
+    <p>在那里隔着桌子坐着本凯、马克思、尤利娅，还有作为教师的角色委托本凯支持的哥布林赫克斯。</p>
+    <p>其他梅赛德斯所有（？）作为魔物以外的存在，是女帝贝阿特里克斯，但是那个好像对教育不好，所以在帝国迷宫那边建了房子，让他住在那里。所以不在这里。</p>
     <p>“<span class="character">！</span>”</p>
-    <p>梅赛德斯が居間に入ると、マックスは慌てて脱兎のように逃げて部屋の隅に蹲ってしまった。</p>
-    <p>まあ、マックスから見れば梅赛德斯は一度は本気で殺されそうになった相手だし、現在進行形で自分を幽閉している相手だ。いい感情は抱けまい。</p>
-    <p>“<span class="character">ベンケイ、マックスとユリアの教育の方はどうだ？</span>”</p>
-    <p>“<span class="character">はっ、マックスの方は順調であります。元々利用されていただけであり、頭は悪くなかったのでしょう</span>”</p>
-    <p>マックスはかつて、エルフェのバジル・サーモンという男に祭り上げられて自分が正当な王の血筋であり、国を救うのだと本気で信じていた。</p>
-    <p>そこに悪意は一切なく、彼は本心から自分の行動が国と民の為のものだと思い込んでいたのだ。</p>
-    <p>しかし傀儡であるが故に余計な知識を一切与えられず、それ故に彼は何も知らぬ裸の王様であった。</p>
-    <p>どうやら、ベンケイの教育のおかげで無事に少しはその状態が改善されたらしい。</p>
-    <p>“<span class="character">おおぉおおぉぉぉ……！　み、見るな……！　後生だから歩く生き恥の私を見ないでくれ……。わ、私は何と恥ずかしい言動を繰り返していたのだああああ……</span>”</p>
-    <p>……改善された結果、どうやら自分がどれだけ恥ずかしい事をしていたかも自覚してしまったらしい。</p>
-    <p>彼はバジルに祭り上げられていた時にマックス・フォン・オルクス・ファイトと名乗っていた。</p>
-    <p>オルクスの貴族のフルネームは名前・接続詞・治めている土地・家名によって構成される。</p>
-    <p>しかし彼は治めてもいないオルクスを勝手に名前に加え、反逆者なのに民を想う王様気取りで“私が民を守る！　キリッ！”なんてやってしまっていたのだ。</p>
-    <p>これは恥ずかしい。</p>
-    <p>当時は何とも思っていなかったのだろうが、真実を知り正しい教育を受けた今は話が別だ。</p>
-    <p>自らがどれだけ馬鹿を晒していたかを知ってしまった今となっては、過去は彼にとって癒えない傷でしかない。</p>
-    <p>“<span class="character">あー……まあ、なんだ……強く生きろ</span>”</p>
-    <p>“<span class="character">うおおおぉぉぉぉおおおおおう！！</span>”</p>
-    <p>梅赛德斯の不慣れな優しさが逆に傷口を抉るのだろう。マックスは泣いた。</p>
-    <p>とりあえずこちらは無事に改善しているようだ。</p>
-    <p>しかし今回ダンジョンの中に来たのは、マックスの傷に塩を塗り込む為ではない。</p>
-    <p>ユリアが使えるかどうかを確認する為である。</p>
-    <p>“<span class="character">久しぶりだな、ユリア</span>”</p>
-    <p>“<span class="character">あ、ああ……</span>”</p>
-    <p>ユリアと梅赛德斯が言葉を交わすのは、以前に交戦して尋問した時以来の事である。</p>
-    <p>ユリアはかつてフォーゲラの国で修行を積んだという凄腕の隠密なのだが、とにかく頭が残念すぎた。</p>
-    <p>何が味方の利になり何が味方の足を引っ張るかも理解せずに、よかれと思って場を引っ掻き回した挙句に最後にはバジルによって幽閉されてしまったのだ。</p>
-    <p>それを拾ってやったのが梅赛德斯なのだが、実は今日まで言葉を交わしていないし顔も合わせていなかった。</p>
+    <p>梅赛德斯一走进起居室，麦克斯就慌慌张张地像脱兔似地逃走，蹲在屋角。</p>
+    <p>嗯，在麦克斯看来，梅赛德斯是一个曾被认真杀死的对手，也是现在进行时幽禁自己的对手。不能抱有好的感情。</p>
+    <p>“<span class="character">本凯，马克斯和尤利娅的教育怎么样？</span>”</p>
+    <p>“<span class="character">啊，麦克斯那边很顺利。本来只是被利用的，头脑不坏吧。</span>”</p>
+    <p>麦克斯曾经被一个名叫埃尔菲的罗勒-三文鱼的男人祭奠，真心相信自己是正当国王的血脉，是救国的。</p>
+    <p>在那里完全没有恶意，他从心底认为自己的行动是为了国家和人民的。</p>
+    <p>但是因为是傀儡，所以完全没有多余的知识，所以他是什么都不知道的裸体国王。</p>
+    <p>看来，多亏了本凯的教育，这种状态才得以顺利改善。</p>
+    <p>“<span class="character">哇哦哦哦哦……！别，别看我……！因为是后生，所以请不要看到走路的我……。我，我重复着多么令人羞愧的言行啊啊啊啊……</span>”</p>
+    <p>……被改善的结果，好像意识到自己做了多么可耻的事情。</p>
+    <p>他被供奉在罗勒的时候自称是马克斯·冯·奥尔库斯·法斯特。</p>
+    <p>奥尔克斯贵族的全名由名字、接续词、治理的土地、家名构成。</p>
+    <p>但是他擅自把没有治理好的奥尔克斯加上名字，明明是叛国者却以思念人民的国王的姿态说：“我来保护人民！kira！”怎么办了。</p>
+    <p>这太丢人了。</p>
+    <p>虽然当时并没有什么想法，但是知道真相接受了正确教育的现在就另当别论了。</p>
+    <p>到了知道自己暴露了多少笨蛋的现在，过去对他来说只是无法治愈的伤口。</p>
+    <p>“<span class="character">啊……哎呀，怎么了……坚强地活下去吧</span>”</p>
+    <p>“<span class="character">哇哦哦哦哦哦哦哦哦哦哦哦哦哦哦哦哦哦哦哦哦哦哦哦哦哦哦哦哦哦哦哦哦哦哦！</span>”</p>
+    <p>梅赛德斯不习惯的温柔反而会剜伤伤口吧。麦克斯哭了。</p>
+    <p>总之这边好像顺利地改善了。</p>
+    <p>但是这次来到迷宫中，并不是为了给麦克斯的伤口涂上盐。</p>
+    <p>为了确认尤利娅是否可以使用。</p>
+    <p>“<span class="character">好久不见，尤利娅</span>”</p>
+    <p>“<span class="character">啊，啊……</span>”</p>
+    <p>尤利娅和梅赛德斯的对话是从以前交战审问时开始的。</p>
+    <p>尤利娅曾经是在福格拉的国家修行的厉害的隐秘，总之脑子太遗憾了。</p>
+    <p>什么是我方的利益，什么是我方的绊脚石都不理解，想着好的地方到处乱动，最后被罗勒幽禁了。</p>
+    <p>把它捡起来的是梅赛德斯，其实到今天为止都没有交谈，也没有见面。</p>
     <p>“<span class="character">……说什么好呢？总之，应该先向你道谢吧。如果你不把我捡起来的话，大概我会死的……</span>”</p>
     <p>“<span class="character">不需要什么道谢的。我觉得可以用，所以就捡了起来</span>”</p>
     <p>如果能用就用。如果不是那样的话，就不要从迷宫里拿出来，直接把它弄死。</p>
